--- a/vzrfLinter.html
+++ b/vzrfLinter.html
@@ -14,16 +14,25 @@
 		<div class="row">
 			<div class="columns">
 				trestuujhjhjhjh
+
 			</div>
 		</div>
 		<div class="row">
-		<div class="tiny-12 columns ">
-			
+		<div class="tiny-2 medium-2 large-2 columns ">
+			<input type="text" id="test">
+			<input type="text" id="test">
+			<input type="text" id="test">
+			<input type="text" id="test">
 		</div>
 		</div>
 		<div class="column tiny-12">
-			
+			<img src="epfo-forgpt-uan-pass.png" width="300" height="300" alt="EPFO Forgot">
 		</div>
+		<table>
+			<tr>
+				<div></div>
+			</tr>
+		</table>
 		</main>
 	</div>
 	<script src="../js/jquery-1.11.2.min.js"></script>
