--- a/vzrfLinter.html
+++ b/vzrfLinter.html
@@ -18,17 +18,32 @@
 			</div>
 		</div>
 		<div class="row">
-		<div class="tiny-2 medium-2 large-2 columns ">
+		<div class="tiny-2 medium-12 large-6">
+		</div>
+		<div class="tiny-2 small-2 ">
+			<label for="test">Test</label>
 			<input type="text" id="test">
+			<label for="test">Test</label>
 			<input type="text" id="test">
+			<label for="test">Test</label>
 			<input type="text" id="test">
+			<label for="test">Test</label>
 			<input type="text" id="test">
+
+			<span class="vzicon icon-info"></span>
 		</div>
 		</div>
 		<div class="column tiny-12">
+		<label for="info2">Test</label>
+			<input type="text" id="newInput2	">
 			<img src="epfo-forgpt-uan-pass.png" width="300" height="300" alt="EPFO Forgot">
+			<label for="info">Test2</label>
+			<input type="text" id="newInput">
+
+			<input type="text">
 		</div>
 		<table>
+		<td></td>
 			<tr>
 				<div></div>
 			</tr>
